--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +297,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=4.4991348531252635, pvalue=1.4019427478617643e-05, df=143.0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "#H0: mu HP grass = mu HP dragon\n",
+    "#H1: mu HP grass != mu HP dragon\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "df_dragon = df[(df[\"Type 1\"]== \"Dragon\")|(df[\"Type 2\"]== \"Dragon\")]\n",
+    "df_grass = df[(df[\"Type 1\"]== \"Grass\")|(df[\"Type 2\"]== \"Grass\")]\n",
+    "\n",
+    "st.ttest_ind(df_dragon[\"HP\"], df_grass[\"HP\"])"
    ]
   },
   {
@@ -313,11 +333,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "Performing Independence Test for HP\n",
+      "We can reject the null hypothesis\n",
+      "Sample mean for legendary 92.73846153846154\n",
+      "Sample mean for legendary 67.18231292517007\n",
+      "----------------------------------------\n",
+      "Performing Independence Test for Attack\n",
+      "We can reject the null hypothesis\n",
+      "Sample mean for legendary 116.67692307692307\n",
+      "Sample mean for legendary 75.66938775510204\n",
+      "----------------------------------------\n",
+      "Performing Independence Test for Sp. Atk\n",
+      "We can reject the null hypothesis\n",
+      "Sample mean for legendary 122.18461538461538\n",
+      "Sample mean for legendary 68.45442176870748\n",
+      "----------------------------------------\n",
+      "Performing Independence Test for Sp. Def\n",
+      "We can reject the null hypothesis\n",
+      "Sample mean for legendary 105.93846153846154\n",
+      "Sample mean for legendary 68.89251700680272\n",
+      "----------------------------------------\n",
+      "Performing Independence Test for Speed\n",
+      "We can reject the null hypothesis\n",
+      "Sample mean for legendary 100.18461538461538\n",
+      "Sample mean for legendary 65.45578231292517\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "#code here\n",
+    "df_legendary = df[df[\"Legendary\"]==True]\n",
+    "df_non_legendary = df[df[\"Legendary\"]==False]\n",
+    "\n",
+    "stats = [\"HP\", \"Attack\", \"Sp. Atk\", \"Sp. Def\", \"Speed\"]\n",
+    "\n",
+    "for stat in stats:\n",
+    "    print(\"----------------------------------------\")\n",
+    "    print(f\"Performing Independence Test for {stat}\")\n",
+    "    t_test, p_value = st.ttest_ind(df_legendary[stat],df_non_legendary[stat])\n",
+    "    if p_value < alpha:\n",
+    "        print(\"We can reject the null hypothesis\")\n",
+    "        print(f\"Sample mean for legendary {df_legendary[stat].mean()}\")\n",
+    "        print(f\"Sample mean for legendary {df_non_legendary[stat].mean()}\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"We did not gather enough evidence to reject the null hypothesis\", p_value)\n",
+    "\n",
+    "# Here we didnt print t_stat because we rather look at p-value which gives probability of second sample belonging to the same \n",
+    "#distribution as the first one. while t_stat gives you \"how many standard deviations\" second sample needed to be away from the frist one."
    ]
   },
   {
@@ -337,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +524,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,17 +554,414 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>distance_school</th>\n",
+       "      <th>distance_hospital</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-114.31</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5612.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>1015.0</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>1.4936</td>\n",
+       "      <td>66900.0</td>\n",
+       "      <td>4.638125</td>\n",
+       "      <td>7.692347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-114.47</td>\n",
+       "      <td>34.40</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>7650.0</td>\n",
+       "      <td>1901.0</td>\n",
+       "      <td>1129.0</td>\n",
+       "      <td>463.0</td>\n",
+       "      <td>1.8200</td>\n",
+       "      <td>80100.0</td>\n",
+       "      <td>4.384165</td>\n",
+       "      <td>7.540617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-114.56</td>\n",
+       "      <td>33.69</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>333.0</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>1.6509</td>\n",
+       "      <td>85700.0</td>\n",
+       "      <td>4.773856</td>\n",
+       "      <td>7.446456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.64</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1501.0</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>515.0</td>\n",
+       "      <td>226.0</td>\n",
+       "      <td>3.1917</td>\n",
+       "      <td>73400.0</td>\n",
+       "      <td>4.801510</td>\n",
+       "      <td>7.438716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.57</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1454.0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>624.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>1.9250</td>\n",
+       "      <td>65500.0</td>\n",
+       "      <td>4.850753</td>\n",
+       "      <td>7.442432</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -114.31     34.19                15.0       5612.0          1283.0   \n",
+       "1    -114.47     34.40                19.0       7650.0          1901.0   \n",
+       "2    -114.56     33.69                17.0        720.0           174.0   \n",
+       "3    -114.57     33.64                14.0       1501.0           337.0   \n",
+       "4    -114.57     33.57                20.0       1454.0           326.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value  distance_school  \\\n",
+       "0      1015.0       472.0         1.4936             66900.0         4.638125   \n",
+       "1      1129.0       463.0         1.8200             80100.0         4.384165   \n",
+       "2       333.0       117.0         1.6509             85700.0         4.773856   \n",
+       "3       515.0       226.0         3.1917             73400.0         4.801510   \n",
+       "4       624.0       262.0         1.9250             65500.0         4.850753   \n",
+       "\n",
+       "   distance_hospital  \n",
+       "0           7.692347  \n",
+       "1           7.540617  \n",
+       "2           7.446456  \n",
+       "3           7.438716  \n",
+       "4           7.442432  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_distance_school(row):\n",
+    "    school = (-118, 37)\n",
+    "    return np.sqrt((row[\"longitude\"]-school[0])**2 + (row[\"latitude\"]-school[1])**2)\n",
+    "\n",
+    "def get_distance_hospital(row):\n",
+    "    hospital = (-122, 34)\n",
+    "    return np.sqrt((row[\"longitude\"]-hospital[0])**2 + (row[\"latitude\"]-hospital[1])**2)\n",
+    "\n",
+    "\n",
+    "df[\"distance_school\"] = df.apply(get_distance_school, axis = 1)\n",
+    "df[\"distance_hospital\"] = df.apply(get_distance_hospital, axis = 1)   # we are applying on each row , therefore the axis needs to be 1.\n",
+    "\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>distance_school</th>\n",
+       "      <th>distance_hospital</th>\n",
+       "      <th>close?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-114.31</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5612.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>1015.0</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>1.4936</td>\n",
+       "      <td>66900.0</td>\n",
+       "      <td>4.638125</td>\n",
+       "      <td>7.692347</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-114.47</td>\n",
+       "      <td>34.40</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>7650.0</td>\n",
+       "      <td>1901.0</td>\n",
+       "      <td>1129.0</td>\n",
+       "      <td>463.0</td>\n",
+       "      <td>1.8200</td>\n",
+       "      <td>80100.0</td>\n",
+       "      <td>4.384165</td>\n",
+       "      <td>7.540617</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-114.56</td>\n",
+       "      <td>33.69</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>333.0</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>1.6509</td>\n",
+       "      <td>85700.0</td>\n",
+       "      <td>4.773856</td>\n",
+       "      <td>7.446456</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.64</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1501.0</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>515.0</td>\n",
+       "      <td>226.0</td>\n",
+       "      <td>3.1917</td>\n",
+       "      <td>73400.0</td>\n",
+       "      <td>4.801510</td>\n",
+       "      <td>7.438716</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.57</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1454.0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>624.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>1.9250</td>\n",
+       "      <td>65500.0</td>\n",
+       "      <td>4.850753</td>\n",
+       "      <td>7.442432</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -114.31     34.19                15.0       5612.0          1283.0   \n",
+       "1    -114.47     34.40                19.0       7650.0          1901.0   \n",
+       "2    -114.56     33.69                17.0        720.0           174.0   \n",
+       "3    -114.57     33.64                14.0       1501.0           337.0   \n",
+       "4    -114.57     33.57                20.0       1454.0           326.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value  distance_school  \\\n",
+       "0      1015.0       472.0         1.4936             66900.0         4.638125   \n",
+       "1      1129.0       463.0         1.8200             80100.0         4.384165   \n",
+       "2       333.0       117.0         1.6509             85700.0         4.773856   \n",
+       "3       515.0       226.0         3.1917             73400.0         4.801510   \n",
+       "4       624.0       262.0         1.9250             65500.0         4.850753   \n",
+       "\n",
+       "   distance_hospital  close?  \n",
+       "0           7.692347   False  \n",
+       "1           7.540617   False  \n",
+       "2           7.446456   False  \n",
+       "3           7.438716   False  \n",
+       "4           7.442432   False  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"close?\"] = df.apply(lambda x: min(x[\"distance_school\"], x[\"distance_hospital\"]) < 3, axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_close = df[df[\"close?\"]==True]\n",
+    "df_far = df[df[\"close?\"]==False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-8.682772900568027, pvalue=4.4088661693985026e-18, df=10970.079050153356)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# H0: mu Price close = mu Price far\n",
+    "# H1: mu Price close != mu Price far\n",
+    "\n",
+    "alpha = 0.05\n",
+    "\n",
+    "st.ttest_ind(df_close[\"median_house_value\"], df_far[\"median_house_value\"], equal_var = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-8.682772900568027, pvalue=1.0, df=10970.079050153356)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now we believe that houses close are actually more expensive\n",
+    "\n",
+    "# H0: mu Price close <= mu Price far\n",
+    "# H1: mu Price close > mu Price far\n",
+    "\n",
+    "st.ttest_ind(df_close[\"median_house_value\"], df_far[\"median_house_value\"], alternative = \"greater\",equal_var = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "196237.16768183446"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_close[\"median_house_value\"].mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "212709.72499562096"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_far[\"median_house_value\"].mean()"
+   ]
   }
  ],
  "metadata": {
@@ -512,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
